--- a/src/app/staff/components/appointment-info/appointment-info.component.html
+++ b/src/app/staff/components/appointment-info/appointment-info.component.html
@@ -52,24 +52,28 @@
 <div *ngIf="showModal" class="modal">
   <div class="modal-content">
     <p class="modal-text">{{ modalMessage }}</p>
-    <button (click)="closeModalAndNavigate()">Volver</button>
+    <div class="button-div">
+      <button class="go-back" (click)="closeModalAndNavigate()">Volver</button>
+    </div>
   </div>
 </div>
 
 <div *ngIf="showReassignmentModal" class="modal">
   <div class="modal-content">
     <h4 class="modal-title">Solicitar Reasignación</h4>
-    <form [formGroup]="reassignmentForm" (ngSubmit)="onReassignmentSubmit()">
-      <div class="form-group">
-        <label for="reassignmentReason">Motivo de la reasignación:</label>
-        <textarea id="reassignmentReason" formControlName="reason" rows="4" placeholder="Describe el motivo de la reasignación..."></textarea>
-        <div *ngIf="reassignmentForm.get('reason')?.invalid && (reassignmentForm.get('reason')?.dirty || reassignmentForm.get('reason')?.touched)">
-          <p class="error">El motivo es requerido.</p>
+    <form class="reassign-form" [formGroup]="reassignmentForm" (ngSubmit)="onReassignmentSubmit()">
+      <div>
+        <div class="form-group">
+          <label for="reassignmentReason">Motivo de la reasignación:</label>
+          <textarea id="reassignmentReason" formControlName="reason" rows="4" placeholder="Describe el motivo de la reasignación..."></textarea>
+          <div *ngIf="reassignmentForm.get('reason')?.invalid && (reassignmentForm.get('reason')?.dirty || reassignmentForm.get('reason')?.touched)">
+            <p class="error">El motivo es requerido.</p>
+          </div>
         </div>
-      </div>
-      <div class="modal-buttons">
-        <button type="submit" [disabled]="reassignmentForm.invalid">Enviar Solicitud</button>
-        <button type="button" (click)="closeReassignmentModal()" class="cancel-button">Cancelar</button>
+        <div class="modal-buttons">
+          <button type="submit" [disabled]="reassignmentForm.invalid">Enviar Solicitud</button>
+          <button type="button" (click)="closeReassignmentModal()" class="cancel-button">Cancelar</button>
+        </div>
       </div>
     </form>
   </div>
