--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -95,6 +95,15 @@
         </button>
 
         <button
+          class="btn reassignments-btn"
+          id="reassignments-btn"
+          routerLink="/staff/reassignments"
+          routerLinkActive="active"
+        >
+          Solicitudes
+        </button>
+
+        <button
           class="btn profile-btn"
           id="profile-btn"
           routerLink="/user/profile"
@@ -299,6 +308,14 @@
           (click)="closeFullscreenMenu()"
         >
           Incidencias
+        </button>
+
+        <button
+          class="menu-item-btn"
+          routerLink="/staff/reassignments"
+          (click)="closeFullscreenMenu()"
+        >
+          Solicitudes
         </button>
 
         <button
