Ahora la pregunta se añade manualmente

--- a/src/app/vet/components/diagnosis/diagnosis.component.html
+++ b/src/app/vet/components/diagnosis/diagnosis.component.html
@@ -69,6 +69,14 @@
         >
           Seguir conversación
         </button>
+
+        <button
+          class="send-btn pointer"
+          id="chat-btn"
+          (click)="addAnswer()"
+        >
+          Publicar en el foro
+        </button>
       </div>
     }
   </div>
