El trabajador ya puede ver sus solicitudes

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -139,6 +139,15 @@
         </button>
 
         <button
+          class="btn reassignments-btn"
+          id="reassignments-btn"
+          routerLink="/staff/reassignments"
+          routerLinkActive="active"
+        >
+          Mis Solicitudes
+        </button>
+
+        <button
           class="btn profile-btn"
           id="profile-btn"
           routerLink="/user/profile"
