--- a/src/app/staff/components/reassignments/reassignments/reassignments.component.html
+++ b/src/app/staff/components/reassignments/reassignments/reassignments.component.html
@@ -66,7 +66,11 @@
                   <td>{{ reassignment.appointment_title }}</td>
                   <td>{{ reassignment.requesting_worker_name }}</td>
                   <td>{{ reassignment.reason }}</td>
-                  <td class="status-value {{ getStatusClass(reassignment.status) }}">{{ reassignment.status }}</td>
+                  <td>
+                    <span class="status-value {{ getStatusClass(reassignment.status) }}">
+                      {{ getDisplayStatus(reassignment.status) }}
+                    </span>
+                  </td>
                   <td>{{ getDate( reassignment.requested_at ) }}</td>
                 </tr>
               }
@@ -79,5 +83,4 @@
         </div>
       }
   }
-
 </div>
