Comenzado el proceso de compartir incidencia

--- a/src/app/staff/components/appointment-info/appointment-info.component.html
+++ b/src/app/staff/components/appointment-info/appointment-info.component.html
@@ -44,6 +44,9 @@
             <button class="reassign-button" type="button" (click)="openReassignmentModal()">
               Solicitar reasignación
             </button>
+            <button class="reassign-button" type="button">
+              Compartir
+            </button>
           </div>
         </form>
       </div>
