--- a/src/app/staff/components/appointment-info/appointment-info.component.html
+++ b/src/app/staff/components/appointment-info/appointment-info.component.html
@@ -119,19 +119,32 @@
       <h3>Compartir con compañeros</h3>
       <button class="share-close-button" (click)="closeShareModal()">&times;</button>
     </div>
-    <div class="share-modal-body">
-      <p>Selecciona uno o más compañeros para compartir esta cita:</p>
-      <ul class="collaborators-list">
-        <li *ngFor="let collaborator of possibleColaborators"
-            (click)="toggleCollaboratorSelection(collaborator)"
-            [class.selected]="isSelected(collaborator)">
-          {{ collaborator.name }} ({{ collaborator.email }})
-        </li>
-      </ul>
-       <div *ngIf="possibleColaborators.length === 0">
-          <p>No hay otros compañeros disponibles para compartir.</p>
+
+    <form [formGroup]="shareForm">
+      <div class="share-modal-body">
+        <p>Selecciona uno o más compañeros para compartir esta cita:</p>
+        <ul class="collaborators-list">
+          <li *ngFor="let collaborator of possibleColaborators"
+              (click)="toggleCollaboratorSelection(collaborator)"
+              [class.selected]="isSelected(collaborator)">
+            {{ collaborator.name }} ({{ collaborator.email }})
+          </li>
+        </ul>
+          <div *ngIf="possibleColaborators.length === 0">
+            <p>No hay otros compañeros disponibles para compartir.</p>
+          </div>
+
+        <div class="form-group" style="margin-top: 20px;">
+          <label for="permission">Asignar Permiso:</label>
+          <select id="permission" formControlName="permission">
+            <option *ngFor="let level of permissionLevels" [value]="level.value">
+              {{ level.display }}
+            </option>
+          </select>
         </div>
-    </div>
+        </div>
+    </form>
+
     <div class="share-modal-footer">
         <button class="cancel-btn" (click)="closeShareModal()">Cancelar</button>
         <button class="confirm-btn" [disabled]="this.selectedCollaborators.size===0" (click)="confirmShare()">Compartir</button>
