El cliente ya puede acceder a la información de las incidencias para poder comentar

--- a/src/app/user/components/appoinments/appoinments.component.html
+++ b/src/app/user/components/appoinments/appoinments.component.html
@@ -17,7 +17,7 @@
         </thead>
         <tbody>
           @for (appoinment of appoinments; track $index) {
-            <tr>
+            <tr [routerLink]="'/staff/appointment-info/' + appoinment.pk">
               <td>{{ appoinment.petName }}</td>
               <td>{{ appoinment.titulo }}</td>
               <td>{{ appoinment.descripcion }}</td>
